# tictoc

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_AUDIT.md  DEVELOPMENT.md  Makefile  README.md  example.py  generate_plots.py  plot.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_thread_safety.py  tictoc.py
.github/workflows/: code-quality.yml
porter_bench/: Benchmarker.py  DataHandler.py  GlobalBenchmarker.py  MemoryBenchmarker.py  TimeBenchmarker.py  __init__.py  basic.py  utils.py
scripts/: pip_upload.sh
tests/: README.md  __init__.py  conftest.py  test_benchmarker.py  test_benchmarker_bdd.py  test_countdown_clock_bdd.py  test_data_handler.py  test_data_io.py  test_global_benchmarker.py  test_memory_benchmarker.py  test_thread_safety.py  test_time_benchmarker.py  test_timer.py  test_timer_bdd.py  test_utils.py
tests/features/: benchmarker.feature  countdown_clock.feature  timer.feature
tictoc/: BaseSaver.py  Benchmarker.py  DataHandler.py  GlobalBenchmarker.py  MemoryBenchmarker.py  TimeBenchmarker.py  __init__.py  basic.py  benchmarkers.py  utils.py
