[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "porter_bench"
version = "0.1.0"
description = "Scripts for benchmarking"
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Omar Montoya", email = "omar.alfonso.montoya@hotmail.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
    "pandas>=2.0.0,<3.0.0",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/porteratzo/porter_bench"

[project.optional-dependencies]
examples = [
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "ipykernel>=6.0.0",
]
dev = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "Flake8-pyproject>=1.2.3",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
exclude = '^tests/'

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0330",  # Wrong hanging indentation before block
    "C0326",  # Bad whitespace
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "cuda: tests that require a CUDA-capable GPU",
    "slow: tests that take more than a few seconds",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".mypy_cache",
    "tests",
]
